<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ejercicio302.app.uned.es.ejercicio304.Condiciones">

    <TextView android:text="@string/tvPregunta" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPregunta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAceptado"
        android:id="@+id/btnAceptado"
        android:layout_below="@+id/tvPregunta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="responder" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRechazado"
        android:id="@+id/btnRechazado"
        android:layout_below="@+id/btnAceptado"
        android:onClick="responder"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
