<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Ejercicio304">

    <TextView android:text="@string/tvInicial" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInicio" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombre"
        android:layout_below="@+id/tvInicio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVerificar"
        android:id="@+id/btnVerificar"
        android:layout_below="@+id/etNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="verificar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvResultado"
        android:id="@+id/tvResultado"
        android:layout_below="@+id/btnVerificar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

</RelativeLayout>
